# poc

./: .gitignore  README.md
mlflow-poc-kaggle/: MLproject  README.md  conda.yaml  pyproject.toml
mlflow-poc-kaggle/src/: train.py
pandas-play/: README.md  pandas-play.ipynb  pyproject.toml
snowflake-python-queries/: pyproject.toml  snowflake-analysis_and_testing.ipynb  snowflake-analysisaudiences.ipynb
snowflake-python-queries/.ipynb_checkpoints/: snowflake-analysis_and_testing-checkpoint.ipynb  snowflake-analysisaudiences-checkpoint.ipynb
sql-cron/: config.toml  connections.toml  create_query.sql  delete_query.sql  pyproject.toml  run_snowflake_job.sh  snowflake_job.py  snowflake_verify.py  verify_query.sql
sql-query/: verify audiences data  with anonymous_registered_user_map as.sql  with registered_user_events as (.sql  with sessions_installation_id_user_id_co.sql
