[tool.poetry]
name = "sql-cron"
version = "0.1.0"
description = ""
authors = ["gaurav.dani <gaurav.dani@joyn.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snowflake-connector-python = {extras = ["secure-local-storage"], version = "^3.12.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
